--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,6 @@
-/GraphicInterface/
-/libreria/
-/types_users/
+/Order/
 /Files/
-/main/
-/Products/
-/Instruments/
 /List/
+/types_users/
+/main/
+/GraphicInterface/
